# lilycomputer

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md  i  setup.sh
assets/: launchagent.plist.tmpl
crates/lily/: Cargo.toml
crates/lily-actions/: Cargo.toml
crates/lily-actions/src/: apple.rs  apps.rs  input.rs  lib.rs  screen.rs  shell.rs
crates/lily-core/: Cargo.toml
crates/lily-core/src/: config.rs  lib.rs  protocol.rs
crates/lily/src/: app.rs  client.rs  main.rs  settings.rs  ui.rs
crates/lilyd/: Cargo.toml
crates/lilyd/src/: agent.rs  auth.rs  browser.rs  groq.rs  history.rs  main.rs  routes.rs
extension/: README.md  background.js  manifest.json  options.html  options.js
scripts/: doctor.sh  grant-perms.md  install.sh  mock_extension.py  uninstall.sh
