[workspace]
resolver = "2"
members = [
    "crates/lily",
    "crates/lilyd",
    "crates/lily-core",
    "crates/lily-actions",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Steve Brewer <henrybrewer93@icloud.com>"]

[workspace.dependencies]
lily-core = { path = "crates/lily-core" }
lily-actions = { path = "crates/lily-actions" }

tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "sync", "time", "process", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
once_cell = "1"

axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }

ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
fast_image_resize = { version = "4", features = ["image"] }

eventsource-stream = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
