[package]
name = "lilyd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "lilyd"
path = "src/main.rs"

[dependencies]
lily-core = { workspace = true }
lily-actions = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
once_cell = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
